trying the social media post integration